--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.BarbeariaApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/midnightblue</item>
+        <item name="colorPrimaryVariant">@color/midnightblue</item>
     </style>
-
     <style name="Theme.BarbeariaApp" parent="Base.Theme.BarbeariaApp" />
 </resources>
